[package]
name = "repeated-lines-remover"
description="Removed the duplicate line emails"
license="MIT"
homepage="https://github.com/shirshak55/Remove-Repeated-Emails-Line-In-File"
repository="https://github.com/shirshak55/Remove-Repeated-Emails-Line-In-File"
version = "1.1.0"
authors = ["Shirshak <8097377+shirshak55@users.noreply.github.com>"]
edition = "2018"
cargo_publish = true
git_push = true
commit_message = "<PROJ_NAME> <NEW_VERSION>"
tag_name = "v<NEW_VERSION>"
editor = "vim"

[dependencies]
